Enabled MC cancellation; Changed behaviour of OpticalProperties, incl. unit tests

--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -105,7 +105,7 @@
             <Button VerticalAlignment="Bottom" Command="{Binding ExecuteMonteCarloSolverCommand}"
                 Background="{Binding StackPanel.Background}" Content="Run Simulation"  
                 Width="120" Height="30" Margin="5"/>
-            <Button VerticalAlignment="Bottom" Command="{Binding CancelMonteCarloSolverCommand}" IsEnabled="False"
+            <Button VerticalAlignment="Bottom" Command="{Binding CancelMonteCarloSolverCommand}"
                 Background="{Binding StackPanel.Background}" Content="Cancel Simulation"  
                 Width="120" Height="30" Margin="5"/>
             <Button VerticalAlignment="Bottom" Command="{Binding SaveSimulationResultsCommand}"
