Bug fixes: 1) gui now updates with newly-loaded input files            2) cmd line timestamp re-added            3) simulation infiles generated            4) edits to naming of isotropic point/distributed point sources            5) fixed units of R(rho) from MC panel

--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -27,7 +27,7 @@
                         Background="{Binding StackPanel.Background}" Content="Load Input File"  
                         Width="180" Height="30" Margin="5"/>
             <Button VerticalAlignment="Bottom" Command="{Binding DownloadDefaultSimulationInputCommand}"
-                        Background="{Binding StackPanel.Background}" Content="Download Default Input File"  
+                        Background="{Binding StackPanel.Background}" Content="Download Prototype Input Files"  
                         Width="180" Height="30" Margin="5"/>
         </StackPanel>
 
