--- a/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
+++ b/src/Vts.SiteVisit/View/Application/Panels/MonteCarloSolverView.xaml
@@ -69,22 +69,86 @@
                     <toolkit:NumericUpDown Name="nudRegionIndex"  Value="{Binding CurrentRegionIndex, Mode=TwoWay}" Minimum="{Binding MinimumRegionIndex}"  Maximum="{Binding MaximumRegionIndex}" Width="35" HorizontalAlignment="Left"/>
                 </StackPanel>
 
-                <ListBox SelectedIndex="{Binding Value, ElementName=nudRegionIndex, Mode=TwoWay}"  ItemsSource="{Binding LayerRegionsVM, Mode=TwoWay}" MaxHeight="150" Margin="5">
+                <ListBox SelectedIndex="{Binding Value, ElementName=nudRegionIndex, Mode=TwoWay}"  ItemsSource="{Binding RegionsVM, Mode=TwoWay}" MaxHeight="150" Margin="5">
+                    <!-- <ListBox SelectedIndex="{Binding Value, ElementName=nudRegionIndex, Mode=TwoWay}"  ItemsSource="{Binding LayerRegionsVM, Mode=TwoWay}" MaxHeight="150" Margin="5">-->
                     <!-- <ListBox SelectedIndex="{Binding CurrentRegionIndex, Mode=TwoWay}" ItemsSource="{Binding LayerRegionsVM, Mode=TwoWay}" MaxHeight="150" Margin="5">-->
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Border BorderBrush="Gray" BorderThickness="1.5">
                                 <StackPanel Orientation="Vertical">
+
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock Text="{Binding Name}"/>
                                     </StackPanel>
-                                    <StackPanel Orientation="Horizontal">
+
+                                    <StackPanel Orientation="Horizontal" Visibility="{Binding IsLayer, Converter={StaticResource myBooleanToVisibilityConverter}}" >
                                         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                                             <TextBlock Text="Layer Height" />
                                             <TextBlock Text="Start/Stop:" />
                                         </StackPanel>
-                                        <v:RangeView DataContext="{Binding ZRangeVM}" Margin="1"/>
+                                        <StackPanel >
+                                            <v:RangeView DataContext="{Binding ZRangeVM}" Margin="1" />
+                                        </StackPanel>
                                     </StackPanel>
+
+                                    <StackPanel Visibility="{Binding IsEllipsoid, Converter={StaticResource myBooleanToVisibilityConverter}}">
+                                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top">
+                                            <StackPanel Orientation="Vertical" Margin="5,0,5,0" >
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="X ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding X, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+
+                                            <StackPanel Orientation="Vertical" Margin="5,0,5,0">
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="Y ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding Y, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+
+                                            <StackPanel Orientation="Vertical"  Margin="5,0,5,0" HorizontalAlignment="Center">
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="Z ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding Z, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+
+                                            <StackPanel Orientation="Vertical" Margin="5,0,5,0" >
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="Dx ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding Dx, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+
+                                            <StackPanel Orientation="Vertical" Margin="5,0,5,0">
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="Y ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding Dy, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+
+                                            <StackPanel Orientation="Vertical"  Margin="5,0,5,0" HorizontalAlignment="Center">
+                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                                    <TextBlock Text="Z ["/>
+                                                    <TextBlock Text="{Binding Units}" />
+                                                    <TextBlock Text="]"/>
+                                                </StackPanel>
+                                                <TextBox Width="40" Text="{Binding Dz, Mode=TwoWay}" HorizontalAlignment="Center"/>
+                                            </StackPanel>
+                                        </StackPanel>
+                                    </StackPanel>
+
                                     <StackPanel Orientation="Horizontal">
                                         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                                             <TextBlock Text="Layer " />
