--- a/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
+++ b/src/Vts.SiteVisit/View/Application/SolverDemoView.xaml
@@ -13,19 +13,18 @@
     </UserControl.DataContext>
     <Grid x:Name="layoutRoot">
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <Grid VerticalAlignment="Top" >
+            <Grid VerticalAlignment="Stretch">
                 <Grid.Background>
                     <RadialGradientBrush RadiusX="1.01" RadiusY="1.1" Center="0.002,-0.001" GradientOrigin="-0.001,-0.006">
                         <GradientStop Color="Black" Offset="0"/>
                         <GradientStop Color="White" Offset="1"/>
                     </RadialGradientBrush>
                 </Grid.Background>
-                <!--Create Grid with two rows and two columns-->
+                <!--Create Grid with 4 rows and 3 columns-->
                 <Grid.RowDefinitions>
                     <RowDefinition Height="70"/>
-                    <RowDefinition/>
-                    <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="60"/>
@@ -42,7 +41,7 @@
                     Foreground="White"
                     HorizontalAlignment="Left" 
                     VerticalAlignment="Center" Margin="20,0,0,0">
-                    Virtual Photonics General-Purpose ATK (CTP 2.0)
+                    Virtual Photonics General-Purpose ATK 1.0 Beta
                 </TextBlock>
                 <Image 
                     Source="/Vts.SiteVisit;Component/Resources/Images/logo-small.png"
@@ -95,7 +94,6 @@
                     VerticalAlignment="Top"  
                     Grid.Row="1"
                     Grid.Column="2"
-                    Grid.RowSpan="2" 
                     Margin="5,0,0,0"
                     Width="530">
                     <controls:TabItem Name="tabPlot" Header="Plot View">
@@ -112,7 +110,7 @@
 
                 <local:TextOutputView
                     DataContext="{Binding TextOutputVM}"
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Stretch"
 					Grid.Column="0"
                     Grid.Row="3" 
                     Grid.ColumnSpan="3" Margin="3" />
